[gd_scene load_steps=5 format=3 uid="uid://blelcjtcjs7wn"]

[ext_resource type="Script" uid="uid://cat6ataib0skg" path="res://scene/UI/artefacts_inventory/artefacts_inventory.gd" id="1_3fi1b"]
[ext_resource type="Texture2D" uid="uid://bdyoysnbmtli7" path="res://scene/UI/main_menu/Background.png" id="1_6gyya"]
[ext_resource type="PackedScene" uid="uid://d3vhitwmdlmwa" path="res://scene/UI/artefacts_inventory/artefact_slot.tscn" id="1_15igh"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qfu65"]
size = Vector2(16, 16)

[node name="ArtefactsInventory" type="CanvasLayer"]
script = ExtResource("1_3fi1b")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6gyya")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ArtefactsMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ArtefactsInventoryPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(750, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Поиск"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 404)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="InventoryGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 16
columns = 7

[node name="ArtefactSlot5" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot8" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot9" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot26" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot27" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot28" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot29" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot30" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot31" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot32" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot33" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot10" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot11" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot12" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot13" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot14" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot15" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot16" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot17" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot18" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot19" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot20" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot21" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot22" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot23" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot24" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot25" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot6" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot7" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactsInventoryPanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/InventoryGrid" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactMiscPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 28

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ArtefactSlot" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_15igh")]
layout_mode = 2
size_flags_vertical = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer2/PanelContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Description Will be There!!! A Very Long Description about arefact absolute long description, so long that takes almost a decade to write this text."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
autowrap_trim_flags = 64

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EquipButton" type="Button" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equip"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1000"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ArtefactsMarginContainer/HBoxContainer/ArtefactMiscPanelContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_qfu65")
expand_mode = 2

[node name="CurrentInventoryMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="EquippedInventory" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="ArtefactSlot" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer/PanelContainer/MarginContainer/EquippedInventory" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot2" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer/PanelContainer/MarginContainer/EquippedInventory" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot3" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer/PanelContainer/MarginContainer/EquippedInventory" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="ArtefactSlot4" parent="MarginContainer/VBoxContainer/CurrentInventoryMarginContainer/PanelContainer/MarginContainer/EquippedInventory" instance=ExtResource("1_15igh")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 150
theme_override_constants/margin_bottom = 40

[node name="BackButton" type="Button" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="MarginContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
